// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactInfoLink /> should render Facebook 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  --tw-text-opacity: 1;
  color: rgba(72, 127, 109, var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  width: 1rem;
  height: 1rem;
  margin-right: 0.5rem;
  fill: currentColor;
  --tw-text-opacity: 1;
  color: rgba(66, 103, 178, var(--tw-text-opacity));
}

<li
  class="emotion-0"
>
  <a
    class="emotion-1"
    href="https://www.facebook.com/laurilavanti"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="emotion-2"
    >
      <use
        xlink:href="#icon-facebook"
      />
    </svg>
    <span>
      Facebook
    </span>
  </a>
</li>
`;

exports[`<ContactInfoLink /> should render LinkedIn 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  --tw-text-opacity: 1;
  color: rgba(72, 127, 109, var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  width: 1rem;
  height: 1rem;
  margin-right: 0.5rem;
  fill: currentColor;
  --tw-text-opacity: 1;
  color: rgba(14, 118, 168, var(--tw-text-opacity));
}

<li
  class="emotion-0"
>
  <a
    class="emotion-1"
    href="https://www.linkedin.com/in/lapanti"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="emotion-2"
    >
      <use
        xlink:href="#icon-linkedin"
      />
    </svg>
    <span>
      LinkedIn
    </span>
  </a>
</li>
`;

exports[`<ContactInfoLink /> should render Twitter 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  --tw-text-opacity: 1;
  color: rgba(72, 127, 109, var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  width: 1rem;
  height: 1rem;
  margin-right: 0.5rem;
  fill: currentColor;
  --tw-text-opacity: 1;
  color: rgba(29, 161, 242, var(--tw-text-opacity));
}

<li
  class="emotion-0"
>
  <a
    class="emotion-1"
    href="https://twitter.com/laurilavanti"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="emotion-2"
    >
      <use
        xlink:href="#icon-twitter"
      />
    </svg>
    <span>
      Twitter
    </span>
  </a>
</li>
`;

exports[`<ContactInfoLink /> should render lauri.lavanti@kirkkonummi.fi 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  width: 1rem;
  height: 1rem;
  margin-right: 0.5rem;
  fill: currentColor;
}

<li
  class="emotion-0"
>
  <svg
    class="emotion-1"
  >
    <use
      xlink:href="#icon-envelope"
    />
  </svg>
  <span>
    lauri.lavanti@kirkkonummi.fi
  </span>
</li>
`;
